LogUtils added to new files. cleaned up code