@@ -40,6 +40,9 @@ import in.huhuba.paho.client.mqttv3.internal.wire.MqttPubRec;
 import in.huhuba.paho.client.mqttv3.internal.wire.MqttPubRel;
 import in.huhuba.paho.client.mqttv3.internal.wire.MqttPublish;
 import in.huhuba.paho.client.mqttv3.internal.wire.MqttWireMessage;
+import in.huhuba.paho.client.mqttv3.logging.LogUtils;
+
+import static in.huhuba.paho.client.mqttv3.logging.LogUtils.LOGD;
 
 /**
  * The core of the client, which holds the state information for pending and
@@ -87,7 +90,7 @@ import in.huhuba.paho.client.mqttv3.internal.wire.MqttWireMessage;
  */
 public class ClientState {
 	private static final String CLASS_NAME = ClientState.class.getName();
-	private static final Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,CLASS_NAME);
+	private static final String TAG = LogUtils.makeLogTag(ClientState.class);
 	private static final String PERSISTENCE_SENT_PREFIX = "s-";
 	private static final String PERSISTENCE_CONFIRMED_PREFIX = "sc-";
 	private static final String PERSISTENCE_RECEIVED_PREFIX = "r-";
@@ -133,11 +136,8 @@ public class ClientState {
 
 	protected ClientState(MqttClientPersistence persistence, CommsTokenStore tokenStore, 
 			CommsCallback callback, ClientComms clientComms, MqttPingSender pingSender) throws MqttException {
-		
-		log.setResourceName(clientComms.getClient().getClientId());
-		log.finer(CLASS_NAME, "<Init>", "" );
 
-		inUseMsgIds = new Hashtable();
+        inUseMsgIds = new Hashtable();
 		pendingMessages = new Vector(this.maxInflight);
 		pendingFlows = new Vector();
 		outboundQoS2 = new Hashtable();
@@ -181,7 +181,7 @@ public class ClientState {
 	protected void clearState() throws MqttException {
 		final String methodName = "clearState";
 		//@TRACE 603=clearState
-		log.fine(CLASS_NAME, methodName,">");
+        LOGD(TAG, methodName+" >");
 
 		persistence.clear();
 		inUseMsgIds.clear();
@@ -202,7 +202,7 @@ public class ClientState {
 		}
 		catch (MqttException ex) {
 			//@TRACE 602=key={0} exception
-			log.fine(CLASS_NAME, methodName, "602", new Object[] {key}, ex);
+            LOGD(TAG, methodName+" 602");
 			if (ex.getCause() instanceof EOFException) {
 				// Premature end-of-file means that the message is corrupted
 				if (key != null) {
@@ -214,7 +214,7 @@ public class ClientState {
 			}
 		}
 		//@TRACE 601=key={0} message={1}
-		log.fine(CLASS_NAME, methodName, "601", new Object[]{key,message});
+        LOGD(TAG, methodName+" 601");
 		return message;
 	}
 
@@ -294,7 +294,7 @@ public class ClientState {
 		int highestMsgId = nextMsgId;
 		Vector orphanedPubRels = new Vector();
 		//@TRACE 600=>
-		log.fine(CLASS_NAME, methodName, "600");
+        LOGD(TAG, methodName+" 600");
 		
 		while (messageKeys.hasMoreElements()) {
 			key = (String) messageKeys.nextElement();
@@ -303,10 +303,10 @@ public class ClientState {
 			if (message != null) {
 				if (key.startsWith(PERSISTENCE_RECEIVED_PREFIX)) {
 					//@TRACE 604=inbound QoS 2 publish key={0} message={1}
-					log.fine(CLASS_NAME,methodName,"604", new Object[]{key,message});
+                    LOGD(TAG, methodName+" 604");
 
 					// The inbound messages that we have persisted will be QoS 2 
-					inboundQoS2.put(new Integer(message.getMessageId()),message);
+					inboundQoS2.put(message.getMessageId(),message);
 				} else if (key.startsWith(PERSISTENCE_SENT_PREFIX)) {
 					MqttPublish sendMessage = (MqttPublish) message;
 					highestMsgId = Math.max(sendMessage.getMessageId(), highestMsgId);
@@ -319,12 +319,12 @@ public class ClientState {
 						if (confirmMessage != null) {
 							// confirmMessage.setDuplicate(true); // REMOVED
 							//@TRACE 605=outbound QoS 2 pubrel key={0} message={1}
-							log.fine(CLASS_NAME,methodName, "605", new Object[]{key,message});
+                            LOGD(TAG, methodName+" 605");
 
-							outboundQoS2.put(new Integer(confirmMessage.getMessageId()), confirmMessage);
+							outboundQoS2.put(confirmMessage.getMessageId(), confirmMessage);
 						} else {
 							//@TRACE 606=outbound QoS 2 completed key={0} message={1}
-							log.fine(CLASS_NAME,methodName, "606", new Object[]{key,message});
+                            LOGD(TAG, methodName+" 606");
 						}
 					} else {
 						// QoS 1 or 2, with no CONFIRM sent...
@@ -332,19 +332,19 @@ public class ClientState {
 						sendMessage.setDuplicate(true);
 						if (sendMessage.getMessage().getQos() == 2) {
 							//@TRACE 607=outbound QoS 2 publish key={0} message={1}
-							log.fine(CLASS_NAME,methodName, "607", new Object[]{key,message});
+                            LOGD(TAG, methodName+" 607");
 							
-							outboundQoS2.put(new Integer(sendMessage.getMessageId()),sendMessage);
+							outboundQoS2.put(Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						} else {
 							//@TRACE 608=outbound QoS 1 publish key={0} message={1}
-							log.fine(CLASS_NAME,methodName, "608", new Object[]{key,message});
+							LOGD(TAG, methodName+" 608");
 
-							outboundQoS1.put(new Integer(sendMessage.getMessageId()),sendMessage);
+							outboundQoS1.put(Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						}
 					}
 					MqttDeliveryToken tok = tokenStore.restoreToken(sendMessage);
 					tok.internalTok.setClient(clientComms.getClient());
-					inUseMsgIds.put(new Integer(sendMessage.getMessageId()),new Integer(sendMessage.getMessageId()));
+					inUseMsgIds.put(Integer.valueOf(sendMessage.getMessageId()),Integer.valueOf(sendMessage.getMessageId()));
 				}
 				else if (key.startsWith(PERSISTENCE_CONFIRMED_PREFIX)) {
 					MqttPubRel pubRelMessage = (MqttPubRel) message;
@@ -359,7 +359,7 @@ public class ClientState {
 		while(messageKeys.hasMoreElements()) {
 			key = (String) messageKeys.nextElement();
 			//@TRACE 609=removing orphaned pubrel key={0}
-			log.fine(CLASS_NAME,methodName, "609", new Object[]{key});
+            LOGD(TAG, methodName+" 606");
 
 			persistence.remove(key);
 		}
@@ -378,13 +378,13 @@ public class ClientState {
 			MqttWireMessage msg = (MqttWireMessage) outboundQoS2.get(key);
 			if (msg instanceof MqttPublish) {
 				//@TRACE 610=QoS 2 publish key={0}
-				log.fine(CLASS_NAME,methodName, "610", new Object[]{key});
+                LOGD(TAG, methodName+" 610");
                 // set DUP flag only for PUBLISH, but NOT for PUBREL (spec 3.1.1)
 				msg.setDuplicate(true);  
 				insertInOrder(pendingMessages, (MqttPublish)msg);
 			} else if (msg instanceof MqttPubRel) {
 				//@TRACE 611=QoS 2 pubrel key={0}
-				log.fine(CLASS_NAME,methodName, "611", new Object[]{key});
+				LOGD(TAG, methodName+" 611");
 
 				insertInOrder(pendingFlows, (MqttPubRel)msg);
 			}
@@ -395,7 +395,7 @@ public class ClientState {
 			MqttPublish msg = (MqttPublish)outboundQoS1.get(key);
 			msg.setDuplicate(true);
 			//@TRACE 612=QoS 1 publish key={0}
-			log.fine(CLASS_NAME,methodName, "612", new Object[]{key});
+            LOGD(TAG, methodName+" 612");
 
 			insertInOrder(pendingMessages, msg);
 		}
@@ -429,14 +429,14 @@ public class ClientState {
 			synchronized (queueLock) {
 				if (actualInFlight >= this.maxInflight) {
 					//@TRACE 613= sending {0} msgs at max inflight window
-					log.fine(CLASS_NAME, methodName, "613", new Object[]{new Integer(actualInFlight)});
+                    LOGD(TAG, methodName+" 613");
 
 					throw new MqttException(MqttException.REASON_CODE_MAX_INFLIGHT);
 				}
 				
 				MqttMessage innerMessage = ((MqttPublish) message).getMessage();
 				//@TRACE 628=pending publish key={0} qos={1} message={2}
-				log.fine(CLASS_NAME,methodName,"628", new Object[]{new Integer(message.getMessageId()), new Integer(innerMessage.getQos()), message});
+                LOGD(TAG, methodName+" 628");
 
 				switch(innerMessage.getQos()) {
 					case 2:
@@ -454,7 +454,7 @@ public class ClientState {
 			}
 		} else {
 			//@TRACE 615=pending send key={0} message {1}
-			log.fine(CLASS_NAME,methodName,"615", new Object[]{new Integer(message.getMessageId()), message});
+            LOGD(TAG, methodName+" 615");
 			
 			if (message instanceof MqttConnect) {
 				synchronized (queueLock) {
@@ -496,7 +496,7 @@ public class ClientState {
 		final String methodName = "undo";
 		synchronized (queueLock) {
 			//@TRACE 618=key={0} QoS={1} 
-			log.fine(CLASS_NAME,methodName,"618", new Object[]{new Integer(message.getMessageId()), new Integer(message.getMessage().getQos())});
+			LOGD(TAG, methodName+" 618");
 			
 			if (message.getMessage().getQos() == 1) {
 				outboundQoS1.remove(new Integer(message.getMessageId()));
@@ -527,7 +527,7 @@ public class ClientState {
 	public MqttToken checkForActivity() throws MqttException {
 		final String methodName = "checkForActivity";
 		//@TRACE 616=checkForActivity entered
-		log.fine(CLASS_NAME,methodName,"616", new Object[]{});
+        LOGD(TAG, methodName+" 616");
 		
         synchronized (quiesceLock) {
             // ref bug: https://bugs.eclipse.org/bugs/show_bug.cgi?id=440698
@@ -555,7 +555,7 @@ public class ClientState {
                     // Add a delta, since the timer and System.currentTimeMillis() is not accurate.                                                                                                                        
                 	// A ping is outstanding but no packet has been received in KA so connection is deemed broken                                                                                                         
                     //@TRACE 619=Timed out as no activity, keepAlive={0} lastOutboundActivity={1} lastInboundActivity={2} time={3} lastPing={4}                                                                           
-                    log.severe(CLASS_NAME,methodName,"619", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity), new Long(time), new Long(lastPing)});
+                    LOGD(TAG, methodName+" 619");
 
                     // A ping has already been sent. At this point, assume that the                                                                                                                                       
                     // broker has hung and the TCP layer hasn't noticed.                                                                                                                                                  
@@ -566,7 +566,7 @@ public class ClientState {
                 if (pingOutstanding == 0 && (time - lastOutboundActivity >= 2*keepAlive)) {
                     
                     // I am probably blocked on a write operations as I should have been able to write at least a ping message                                                                                                    
-                	log.severe(CLASS_NAME,methodName,"642", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity), new Long(time), new Long(lastPing)});
+                    LOGD(TAG, methodName+" 642");
 
                     // A ping has not been sent but I am not progressing on the current write operation. 
                 	// At this point, assume that the broker has hung and the TCP layer hasn't noticed.                                                                                                                                                  
@@ -586,7 +586,7 @@ public class ClientState {
                     (time - lastOutboundActivity >= keepAlive - delta)) {
 
                     //@TRACE 620=ping needed. keepAlive={0} lastOutboundActivity={1} lastInboundActivity={2}                                                                                                              
-                    log.fine(CLASS_NAME,methodName,"620", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity)});
+                    LOGD(TAG, methodName+" 620");
 
                     // pingOutstanding++;  // it will be set after the ping has been written on the wire                                                                                                             
                     // lastPing = time;    // it will be set after the ping has been written on the wire                                                                                                             
@@ -600,12 +600,12 @@ public class ClientState {
                     notifyQueueLock();
                 }
                 else {
-                    log.fine(CLASS_NAME, methodName, "634", null);
+                    LOGD(TAG, methodName+" 634");
                     nextPingTime = Math.max(1, getKeepAlive() - (time - lastOutboundActivity));
                 }
             }
-            //@TRACE 624=Schedule next ping at {0}                                                                                                                                                                                
-            log.fine(CLASS_NAME, methodName,"624", new Object[]{new Long(nextPingTime)});
+            //@TRACE 624=Schedule next ping at {0}
+            LOGD(TAG, methodName+" 624");
             pingSender.schedule(nextPingTime);
 		}
 		
@@ -636,12 +636,12 @@ public class ClientState {
 					(pendingFlows.isEmpty() && actualInFlight >= this.maxInflight)) {
 					try {
 						//@TRACE 644=wait for new work or for space in the inflight window 
-						log.fine(CLASS_NAME,methodName, "644");						
+                        LOGD(TAG, methodName+" 644");
  
 						queueLock.wait();
 						
 						//@TRACE 647=new work or ping arrived 
-						log.fine(CLASS_NAME,methodName, "647");
+                        LOGD(TAG, methodName+" 647");
 					} catch (InterruptedException e) {
 					}
 				}
@@ -652,7 +652,7 @@ public class ClientState {
 				if (!connected && 
 						(pendingFlows.isEmpty() || !((MqttWireMessage)pendingFlows.elementAt(0) instanceof MqttConnect))) {
 					//@TRACE 621=no outstanding flows and not connected
-					log.fine(CLASS_NAME,methodName,"621");
+                    LOGD(TAG, methodName+" 621");
 					
 					return null;
 				}
@@ -671,7 +671,7 @@ public class ClientState {
 						inFlightPubRels++;
 
 						//@TRACE 617=+1 inflightpubrels={0}
-						log.fine(CLASS_NAME,methodName,"617", new Object[]{new Integer(inFlightPubRels)});
+                        LOGD(TAG, methodName+" 617");
 					}
 		
 					checkQuiesceLock();
@@ -686,10 +686,10 @@ public class ClientState {
 						actualInFlight++;
 	
 						//@TRACE 623=+1 actualInFlight={0}
-						log.fine(CLASS_NAME,methodName,"623",new Object[]{new Integer(actualInFlight)});
+                        LOGD(TAG, methodName+" 623");
 					} else {
 						//@TRACE 622=inflight window full
-						log.fine(CLASS_NAME,methodName,"622");				
+                        LOGD(TAG, methodName+" 622");
 					}
 				}			
 			}
@@ -701,50 +701,13 @@ public class ClientState {
 		this.keepAlive = interval;
 	}
 	
-	/**
-	 * COMMENTED OUT AS NO LONGER USED.
-	 * Deduce how long to to wait until a ping is required.
-	 * 
-	 * In order to keep the connection alive the server must see activity within 
-	 * the keepalive interval. If the application is not sending / receiving
-	 * any messages then the client will send a ping.  This method works out
-	 * the next time that a ping must be sent in order for the server to 
-	 * know the client is alive.
-	 * @return  time before a ping needs to be sent to keep alive the connection
-	long getTimeUntilPing() {
-		long pingin = getKeepAlive();
-		// If KA is zero which means just wait for work or 
-		// if a ping is outstanding return the KA value
-		if (connected && (getKeepAlive() > 0) && !pingOutstanding) {
-		
-			long time = System.currentTimeMillis();
-			long timeSinceOut = (time-lastOutboundActivity);
-			long timeSinceIn = (time-lastInboundActivity);
-			
-			if (timeSinceOut > timeSinceIn) {
-				pingin = (getKeepAlive()-timeSinceOut);
-			} else {
-				pingin = (getKeepAlive()-timeSinceIn);
-			}
-			
-			// Unlikely to be negative or zero but in the case it is return a 
-			// small value > 0 to cause a ping to occur
-			if (pingin <= 0) {
-				pingin = 10;
-			}
-		}
-		return (pingin);
-	}
-	 */
-	
     public void notifySentBytes(int sentBytesCount) {
         final String methodName = "notifySentBytes";
         if (sentBytesCount > 0) {
         	this.lastOutboundActivity = System.currentTimeMillis();
         }
         // @TRACE 631=sent bytes count={0}                                                                                                                                                                                            
-        log.fine(CLASS_NAME, methodName, "631", new Object[] {
-        		 new Integer(sentBytesCount) });
+        LOGD(TAG, methodName+" 631");
     }
 
 	
@@ -757,7 +720,7 @@ public class ClientState {
 		
 		this.lastOutboundActivity = System.currentTimeMillis();
 		//@TRACE 625=key={0}
-		log.fine(CLASS_NAME,methodName,"625",new Object[]{message.getKey()});
+        LOGD(TAG, methodName+" 625");
 		
 		MqttToken token = tokenStore.getToken(message);
 		token.internalTok.notifySent();
@@ -769,7 +732,7 @@ public class ClientState {
                 	pingOutstanding++;
                 }
                 //@TRACE 635=ping sent. pingOutstanding: {0}                                                                                                                                                                  
-                log.fine(CLASS_NAME,methodName,"635",new Object[]{ new Integer(pingOutstanding)});
+                LOGD(TAG, methodName+" 635");
             }
         }
         else if (message instanceof MqttPublish) {
@@ -791,7 +754,7 @@ public class ClientState {
 		synchronized (queueLock) {
 			actualInFlight--;
 			//@TRACE 646=-1 actualInFlight={0}
-			log.fine(CLASS_NAME,methodName,"646",new Object[]{new Integer(actualInFlight)});
+            LOGD(TAG, methodName+" 646");
 			
 			if (!checkQuiesceLock()) {
 				queueLock.notifyAll();
@@ -805,7 +768,7 @@ public class ClientState {
 		int tokC = tokenStore.count();
 		if (quiescing && tokC == 0 && pendingFlows.size() == 0 && callback.isQuiesced()) {
 			//@TRACE 626=quiescing={0} actualInFlight={1} pendingFlows={2} inFlightPubRels={3} callbackQuiesce={4} tokens={5}
-			log.fine(CLASS_NAME,methodName,"626",new Object[]{new Boolean(quiescing), new Integer(actualInFlight), new Integer(pendingFlows.size()), new Integer(inFlightPubRels), Boolean.valueOf(callback.isQuiesced()), new Integer(tokC)});
+            LOGD(TAG, methodName+" 626");
 			synchronized (quiesceLock) {
 				quiesceLock.notifyAll();
 			}
@@ -820,8 +783,7 @@ public class ClientState {
             this.lastInboundActivity = System.currentTimeMillis();
         }
         // @TRACE 630=received bytes count={0}                                                                                                                                                                                        
-        log.fine(CLASS_NAME, methodName, "630", new Object[] {
-                 new Integer(receivedBytesCount) });
+        LOGD(TAG, methodName+" 630");
     }
 
     /**
@@ -835,8 +797,7 @@ public class ClientState {
 		this.lastInboundActivity = System.currentTimeMillis();
 
 		// @TRACE 627=received key={0} message={1}
-		log.fine(CLASS_NAME, methodName, "627", new Object[] {
-				new Integer(ack.getMessageId()), ack });
+        LOGD(TAG, methodName+" 627");
 
 		MqttToken token = tokenStore.getToken(ack);
 		MqttException mex = null;
@@ -863,7 +824,7 @@ public class ClientState {
                 }
             }
             //@TRACE 636=ping response received. pingOutstanding: {0}                                                                                                                                                     
-            log.fine(CLASS_NAME,methodName,"636",new Object[]{ new Integer(pingOutstanding)});
+            LOGD(TAG, methodName+" 636");
 		} else if (ack instanceof MqttConnack) {
 			int rc = ((MqttConnack) ack).getReturnCode();
 			if (rc == 0) {
@@ -914,8 +875,7 @@ public class ClientState {
 		this.lastInboundActivity = System.currentTimeMillis();
 
 		// @TRACE 651=received key={0} message={1}
-		log.fine(CLASS_NAME, methodName, "651", new Object[] {
-				new Integer(message.getMessageId()), message });
+        LOGD(TAG, methodName+" 651");
 		
 		if (!quiescing) {
 			if (message instanceof MqttPublish) {
@@ -971,26 +931,24 @@ public class ClientState {
 
 		if (message != null && message instanceof MqttAck) {
 			// @TRACE 629=received key={0} token={1} message={2}
-			log.fine(CLASS_NAME, methodName, "629", new Object[] {
-					 new Integer(message.getMessageId()), token, message });
+            LOGD(TAG, methodName+" 629");
 
 			MqttAck ack = (MqttAck) message;
 
 			if (ack instanceof MqttPubAck) {
 				// QoS 1 - user notified now remove from persistence...
 				persistence.remove(getSendPersistenceKey(message));
-				outboundQoS1.remove(new Integer(ack.getMessageId()));
+				outboundQoS1.remove(Integer.valueOf(ack.getMessageId()));
 				decrementInFlight();
 				releaseMessageId(message.getMessageId());
 				tokenStore.removeToken(message);
 				// @TRACE 650=removed Qos 1 publish. key={0}
-				log.fine(CLASS_NAME, methodName, "650",
-						new Object[] { new Integer(ack.getMessageId()) });
+                LOGD(TAG, methodName+" 650");
 			} else if (ack instanceof MqttPubComp) {
 				// QoS 2 - user notified now remove from persistence...
 				persistence.remove(getSendPersistenceKey(message));
 				persistence.remove(getSendConfirmPersistenceKey(message));
-				outboundQoS2.remove(new Integer(ack.getMessageId()));
+				outboundQoS2.remove(Integer.valueOf(ack.getMessageId()));
 
 				inFlightPubRels--;
 				decrementInFlight();
@@ -998,9 +956,7 @@ public class ClientState {
 				tokenStore.removeToken(message);
 
 				// @TRACE 645=removed QoS 2 publish/pubrel. key={0}, -1 inFlightPubRels={1}
-				log.fine(CLASS_NAME, methodName, "645", new Object[] {
-						new Integer(ack.getMessageId()),
-						new Integer(inFlightPubRels) });
+                LOGD(TAG, methodName+" 645");
 			}
 
 			checkQuiesceLock();
@@ -1015,14 +971,14 @@ public class ClientState {
 		// Let the user know an async operation has completed and then remove the token
 		if (ack != null && ack instanceof MqttAck && !(ack instanceof MqttPubRec)) {
 			//@TRACE 648=key{0}, msg={1}, excep={2}
-			log.fine(CLASS_NAME,methodName, "648", new Object [] {token.internalTok.getKey(), ack, ex});
+            LOGD(TAG, methodName+" 648");
 			callback.asyncOperationComplete(token);
 		}
 		// There are cases where there is no ack as the operation failed before 
 		// an ack was received 
 		if (ack == null ) {
 			//@TRACE 649=key={0},excep={1}
-			log.fine(CLASS_NAME,methodName, "649", new Object [] { token.internalTok.getKey(), ex});
+            LOGD(TAG, methodName+" 649");
 			callback.asyncOperationComplete(token);
 		}
 	}
@@ -1033,7 +989,7 @@ public class ClientState {
 	public void connected() {
 		final String methodName = "connected";
 		//@TRACE 631=connected
-		log.fine(CLASS_NAME, methodName, "631");
+        LOGD(TAG, methodName+" 631");
 		this.connected = true;
 		
 		pingSender.start(); //Start ping thread when client connected to server.
@@ -1050,7 +1006,7 @@ public class ClientState {
 	public Vector resolveOldTokens(MqttException reason) {
 		final String methodName = "resolveOldTokens";
 		//@TRACE 632=reason {0}
-		log.fine(CLASS_NAME,methodName,"632", new Object[] {reason});
+        LOGD(TAG, methodName+" 632");
 		
 		// If any outstanding let the user know the reason why it is still
 		// outstanding by putting the reason shutdown is occurring into the 
@@ -1089,7 +1045,7 @@ public class ClientState {
 	public void disconnected(MqttException reason) {
 		final String methodName = "disconnected";
 		//@TRACE 633=disconnected
-		log.fine(CLASS_NAME,methodName,"633", new Object[] {reason});		
+        LOGD(TAG, methodName+" 633");
 
 		this.connected = false;
 
@@ -1158,7 +1114,7 @@ public class ClientState {
 		// If the timeout is greater than zero t
 		if (timeout > 0 ) {
 			//@TRACE 637=timeout={0}
-			log.fine(CLASS_NAME,methodName, "637",new Object[]{new Long(timeout)});
+            LOGD(TAG, methodName+" 637");
 			synchronized (queueLock) {
 				this.quiescing = true;
 			}
@@ -1174,7 +1130,7 @@ public class ClientState {
 					int tokc = tokenStore.count();
 					if (tokc > 0 || pendingFlows.size() >0 || !callback.isQuiesced()) {
 						//@TRACE 639=wait for outstanding: actualInFlight={0} pendingFlows={1} inFlightPubRels={2} tokens={3}
-						log.fine(CLASS_NAME, methodName,"639", new Object[]{new Integer(actualInFlight), new Integer(pendingFlows.size()), new Integer(inFlightPubRels), new Integer(tokc)});
+                        LOGD(TAG, methodName+" 639");
 
 						// wait for outstanding in flight messages to complete and
 						// any pending flows to complete
@@ -1195,7 +1151,7 @@ public class ClientState {
 				actualInFlight = 0;
 			}
 			//@TRACE 640=finished
-			log.fine(CLASS_NAME, methodName, "640");
+            LOGD(TAG, methodName+" 640");
 		}
 	}
 
@@ -1203,7 +1159,7 @@ public class ClientState {
 		final String methodName = "notifyQueueLock";
 		synchronized (queueLock) {
 			//@TRACE 638=notifying queueLock holders
-			log.fine(CLASS_NAME,methodName,"638");
+            LOGD(TAG, methodName+" 638");
 			queueLock.notifyAll();
 		}
 	}
@@ -1212,10 +1168,10 @@ public class ClientState {
 		final String methodName = "deliveryComplete";
 
 		//@TRACE 641=remove publish from persistence. key={0}
-		log.fine(CLASS_NAME,methodName,"641", new Object[]{new Integer(message.getMessageId())});
+        LOGD(TAG, methodName+" 641");
 		
 		persistence.remove(getReceivedPersistenceKey(message));
-		inboundQoS2.remove(new Integer(message.getMessageId()));
+		inboundQoS2.remove(message.getMessageId());
 	}
 	
 	/**
